[tool.poetry]
name = "pykda"
version = "0.6.0"
description = ""
authors = ["Joost Berkhout <joost.berkhout@vu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
tarjan = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.0.1"
ipython = "^8.22.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov=PyKDA --cov-report=xml"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80
select = ["E", "F", "I", "NPY", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"]

[tool.ruff.isort]
case-sensitive = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
